hphp/test/quick/ctor_param_promotion_abstract.php.expectf

Fatal error: parameter modifiers not allowed on abstract __construct in %s on line 4
